[update] export maps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
       "name": "@matrixages/knife",
-      "version": "1.0.0",
+      "version": "1.0.1",
       "description": "Util collections for react, nodejs, web.",
       "author": "Wendao",
       "license": "MIT",
@@ -11,10 +11,12 @@
       },
       "exports": {
             "./react": {
+                  "browser": "./dist/react/index.js",
                   "default": "./dist/react/index.js",
                   "types": "./dist/react/index.d.ts"
             },
             "./node": {
+                  "browser": "./dist/node/index.js",
                   "default": "./dist/node/index.js",
                   "types": "./dist/node/index.d.ts"
             }
