[update] build script

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
             "type": "git",
             "url": "git+https://github.com/matrixages/knife.git"
       },
-      "exports": {
-         
-      },
+      "exports": {},
       "scripts": {
+            "clear": "tsx ./build/clear.ts",
+            "move": "tsx ./build/after.ts",
             "dev": "rollup --c rollup.dev.ts --configPlugin swc3 -w",
-            "build": "tsx ./build/clear.ts && rollup --c rollup.build.ts --configPlugin swc3 && tsc && tsx ./build/after.ts",
+            "build": "pnpm run clear && rollup --c rollup.build.ts --configPlugin swc3 && tsc && pnpm run move",
             "exec": "rollup --c rollup.build.ts --configPlugin swc3 && node dist"
       },
       "keywords": [
