--- a/package.json
+++ b/package.json
@@ -9,7 +9,20 @@
             "type": "git",
             "url": "git+https://github.com/matrixages/knife.git"
       },
-      "exports": {},
+      "exports": {
+            "./node": {
+                  "default": "./node/index.js",
+                  "types": "./node/index.d.ts"
+            },
+            "./react": {
+                  "default": "./react/index.js",
+                  "types": "./react/index.d.ts"
+            },
+            "./storage": {
+                  "default": "./storage/index.js",
+                  "types": "./storage/index.d.ts"
+            }
+      },
       "scripts": {
             "clear": "tsx ./build/clear.ts",
             "move": "tsx ./build/after.ts",
@@ -34,6 +47,7 @@
             "@types/fs-extra": "^11.0.1",
             "@types/node": "^18.13.0",
             "@types/react": "^18.0.28",
+            "fast-glob": "^3.2.12",
             "fs-extra": "^11.1.0",
             "rollup": "^3.15.0",
             "rollup-plugin-swc3": "^0.8.0",
