[update] types/Flatten for array

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       ],
       "scripts": {
             "dev": "rollup --c rollup.dev.ts --configPlugin swc3 -w",
-            "build": "rollup --c rollup.build.ts --configPlugin swc3 && tsc",
+            "build": "tsx ./build/clear && rollup --c rollup.build.ts --configPlugin swc3 && tsc",
             "exec": "rollup --c rollup.build.ts --configPlugin swc3 && node dist"
       },
       "keywords": [
