--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
       "scripts": {
             "clear": "tsx ./build/clear.ts",
             "move": "tsx ./build/after.ts",
-            "dev": "rollup --c rollup.dev.ts --configPlugin swc3 -w",
-            "build": "pnpm run clear && rollup --c rollup.build.ts --configPlugin swc3 && tsc && pnpm run move",
-            "exec": "rollup --c rollup.build.ts --configPlugin swc3 && node dist"
+            "dev": "rspack build --watch",
+            "build": "pnpm run clear && rspack build && tsc && pnpm run move"
       },
       "keywords": [
             "react",
@@ -54,16 +53,14 @@
             "react": "^18.2.0"
       },
       "devDependencies": {
-            "@rollup/plugin-node-resolve": "^15.0.1",
-            "@swc/core": "^1.3.35",
+            "@rspack/cli": "^0.2.4",
+            "ts-node": "^10.9.1",
             "@types/fs-extra": "^11.0.1",
             "@types/node": "^18.13.0",
             "@types/react": "^18.0.28",
             "fast-glob": "^3.2.12",
             "fs-extra": "^11.1.0",
-            "rollup": "^3.15.0",
-            "rollup-plugin-swc3": "^0.8.0",
-            "tsx": "^3.12.3",
-            "typescript": "5.0.0-dev.20230222"
+            "tsx": "^3.12.7",
+            "typescript": "^5.1.6"
       }
 }
