--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"moduleResolution": "Node",
 		"declaration": true,
 		"emitDeclarationOnly": true,
-		"strict": true,
+		"strict": false,
 		"outDir": "dist",
 		"baseUrl": ".",
 		"esModuleInterop": true,
@@ -16,7 +16,6 @@
 		},
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
-		"suppressImplicitAnyIndexErrors": true,
 		"ignoreDeprecations": "5.0"
 	},
 	"include": ["src"]
