--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,10 @@
 		"experimentalDecorators": true,
 		"ignoreDeprecations": "5.0"
 	},
-	"include": ["src"]
+	"include": ["src"],
+      "ts-node": {
+		"compilerOptions": {
+			"module": "commonjs"
+		}
+	}
 }
